@@ -1,5 +1,6 @@
 2010-02-22
 	* Various bugfixes of code name with ' in coding Tab.
+	* Various bugfixes of code name with ' in code category Tab.
 
 2010-02-21
 	* Click-handler for second half of code-mark.
